src/test/ui/keyword/keyword-super.stderr
error[E0433]: failed to resolve: there are too many initial `super`s.
  --> $DIR/keyword-super.rs:2:9
   |
LL |     let super: isize;
   |         ^^^^^ there are too many initial `super`s.

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
