src/test/ui/keyword/keyword-super.rs
fn main() {
    let super: isize; //~ ERROR failed to resolve: there are too many initial `super`s
}
